--- a/mujeres2.html
+++ b/mujeres2.html
@@ -71,13 +71,14 @@
           MUJERES PIONERAS EN TECNOLOGÍA
           </b>
            </h1>
+           <p>Pulsa sobre las imágenes para más información</p>
        </div>
 
 
        <div class="container">
          <div class="row">
            <div class="col-1"> </div>
-           <div class="col-2">  <div class="flip-card">
+           <div class="col-2"> <br> <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                 <img src="https://www.eldiario.es/fotos/Angela-Ruiz-Robles-Enciclopedia-Mecanica_EDIIMA20180222_0729_19.jpg" alt="Avatar" style="width:300px;height:300px;">
@@ -90,7 +91,7 @@
               </div>
               </div>
             </div>
-          <div class="col-2">
+          <div class="col-2"> <br><br><br><br><br><br><br><br><br><br>
               <div class="flip-card">
                  <div class="flip-card-inner">
                  <div class="flip-card-front">
@@ -103,7 +104,7 @@
                    </div>
                          </div>
                        </div>
-                       <div class="col-2">  <div class="flip-card">
+                       <div class="col-2"> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><div class="flip-card">
                           <div class="flip-card-inner">
                           <div class="flip-card-front">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Hedy_Lamarr_Publicity_Photo_for_The_Heavenly_Body_1944.jpg/220px-Hedy_Lamarr_Publicity_Photo_for_The_Heavenly_Body_1944.jpg" alt="Avatar" style="width:300px;height:300px;">
@@ -115,7 +116,8 @@
                                     </div>
                                   </div>
                        </div>
-                      <div class="col-2">  <div class="flip-card">
+                      <div class="col-2"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <div class="flip-card">
                            <div class="flip-card-inner">
                            <div class="flip-card-front">
                          <img src="https://sciencenode.org/img/SAJ1.jpg" alt="Avatar" style="width:300px;height:300px;">
@@ -127,7 +129,9 @@
                              </div>
                                      </div>
                                    </div>
-                                  <div class="col-2"> <div class="flip-card">
+                                  <div class="col-2"> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                                    <br><br><br><br><br><br><br><br><br><br>
+                                    <div class="flip-card">
                                       <div class="flip-card-inner">
                                     <div class="flip-card-front">
                                       <img src="https://www.ismsforum.es/img/a13/n133_radia.jpg" alt="Avatar" style="width:300px;height:300px;">
@@ -147,6 +151,7 @@
 
             </div>
           </div>
+
 
 
 
