--- a/Redes Sociales.html
+++ b/Redes Sociales.html
@@ -69,7 +69,7 @@
   </head>
   <body>
     <ul>
-      <li><a class="active" href="Tecnoweb.html">Inventos</a></li>
+      <li><a class="active" href="index.html">Inventos</a></li>
       <li><a href="mujeres2.html">Mujeres pioneras</a></li>
       <li><a href="Redes Sociales.html">Redes sociales</a></li>
       <li><a href="Sobrenosotras.html">Sobre nosotras</a></li>
