--- a/mujeres.html
+++ b/mujeres.html
@@ -36,11 +36,11 @@
 
   li a:hover {
     background-color: #111;
-  } 
+  }
 </style>
     <body>
       <ul>
-        <li><a class="active" href="Tecnoweb.html">Inventos</a></li>
+        <li><a class="active" href="index.html">Inventos</a></li>
         <li><a href="mujeres.html">Mujeres pioneras</a></li>
         <li><a href="Redes Sociales.html">Redes sociales</a></li>
         <li><a href="Sobrenosotras.html">Sobre nosotras</a></li>
