--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ li a:hover {
       </ul>
 
 
-    <div class="container-fluid bg-success py-5">
+    <div class="container-fluid bg-secondary py-5">
         <div class="container text-white">
             <h1 class="display-3">
               <b text-align: center>  Inventos </b>
