--- a/mujeres2.html
+++ b/mujeres2.html
@@ -51,7 +51,7 @@
         <li><a href="Redes Sociales.html">Redes sociales</a></li>
         <li><a href="Sobrenosotras.html">Sobre nosotras</a></li>
       </ul>
-    <div class="container-fluid bg-success py-5">
+    <div class="container-fluid bg-secondary py-5">
         <div class="container text-white">
             <h1 class="display-3"> <b>
             Mujeres pioneras
