--- a/Redes Sociales.html
+++ b/Redes Sociales.html
@@ -76,7 +76,7 @@
     </ul>
 
 
-  <div class="container-fluid bg-success py-5">
+  <div class="container-fluid bg-secondary py-5">
       <div class="container text-white">
           <h1 class="display-3">
             <b text-align: center> Redes Sociales </b> </h1>
